# pip_depender

./: README.md  pyproject.toml
pip_depender/: __init__.py  cli.py
