[tool.poetry]
name = "pip-depender"
version = "0.1.0"
description = "Depender: Streamline your Python project dependencies with intelligent version management"
authors = ["chyroc <chyroc@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
